--- a/task 1/test.html
+++ b/task 1/test.html
@@ -14,7 +14,7 @@
         <div class="about_me">
             <div class="photo_and_text">
                 <div class="my_photo">
-                    <img src="C:/Users/user/Desktop/дз front/photo_2025-01-07_21-59-51.jpg" alt="Фото Эвелины">
+                    <img src="photo_2025-01-07_21-59-51.jpg" alt="Фото Эвелины">
                 </div>
                 <div class="my_info">
                     <p>
